# cache_decorator

./: .gitignore  README.md  conftest.py  example.py  pyproject.toml  setup.py
.github/workflows/: python.yml
cache_decorator/: __init__.py  __version__.py  cache.py
cache_decorator/backends/: __init__.py  backend.py  backend_template.py  compress_json_backend.py  compress_pickle_backend.py  exceptions.py  json_backend.py  keras_model_backend.py  numpy_backend.py  pandas_csv_backend.py  pandas_embedding_backend.py  pickle_backend.py  txt_backend.py
cache_decorator/utils/: __init__.py  get_format_groups.py  get_params.py  parse_time.py  random_string.py
examples/: example.py
tests/: test_capture_enable_arg_name.py  test_compute_path.py  test_csv.py  test_csv_bz2.py  test_csv_gz.py  test_csv_with_tuple_columns.py  test_csv_xz.py  test_csv_zip.py  test_duration_missing_path.py  test_duration_validity.py  test_embedding.py  test_empty_folder.py  test_enable_cache_arg_name.py  test_exception.py  test_fmt_cache_dir.py  test_get_params.py  test_getattr_path.py  test_ignore_args.py  test_ignore_args_method.py  test_ignore_kwargs.py  test_json.py  test_json_bz.py  test_json_gz.py  test_json_lzma.py  test_keras_model.py  test_kwargs.py  test_load_store.py  test_luca.py  test_method.py  test_npy.py  test_numpy_csv.py  test_optional_path_keys.py  test_parse_time.py  test_pickle.py  test_pickle_bz.py  test_pickle_gz.py  test_pickle_lzma.py  test_pickle_zip.py  test_static_class_property_methods.py  test_structured_paths.py  (+6 more)
tests/utils/: __init__.py  standard_test.py  (+3 more)
