[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cache_decorator"
dynamic = ["version"]
description = "A simple decorator to cache the results of computationally heavy functions"
readme = "README.md"
license = "MIT"
requires-python = ">= 3.11"
authors = [
    { name = "Tommaso Fontana", email = "tommaso.fontana.96@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "dict_hash>=1.3.2",
    "humanize>=3.4.1",
    "compress_pickle>=2.0.1",
    "compress_json>=1.1.0",
    "deflate_dict",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coveralls",
    "numpy",
    "pandas",
    "tensorflow",
    "lxml",
    "validate_version_code",
    "codacy-coverage",
    "pytest_readme",
]

[project.urls]
Homepage = "https://github.com/zommiommy/cache_decorator"

[tool.hatch.version]
path = "cache_decorator/__version__.py"

[tool.basedpyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
